[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["JichangJang <wlckd90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
black = "^20.8b1"
pytest-watch = "^4.2.0"
pylint = "^2.7.2"
mypy = "^0.812"
flake8 = "^3.9.2"
Sphinx = "^4.0.2"
watchdog = "^2.1.2"
tox = "^3.23.1"
coverage = "^5.5"
pytest-cov = "^2.12.1"
Flask = "<2"
pytest-flask = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
